# sqlitestudio

./: ChangeLog.md  README.md
Letos/: CMakeLists.txt
Letos/core/: letos.cpp
Letos/core/translations/: core_af_ZA.ts  core_ar_SA.ts  core_be_BY.ts  core_ca_ES.ts  core_cs_CZ.ts  core_da_DK.ts  core_de_DE.ts  core_el_GR.ts  core_en_US.ts  core_es_ES.ts  core_fa_IR.ts  core_fi_FI.ts  core_fr_FR.ts  core_he_IL.ts  core_hu_HU.ts  core_it_IT.ts  core_ja_JP.ts  core_kaa.ts  core_ko_KR.ts  core_nl_NL.ts  core_no_NO.ts  core_pl_PL.ts  core_pt_BR.ts  core_pt_PT.ts  core_ro_RO.ts  core_ru_RU.ts  core_sk_SK.ts  core_sr_SP.ts  core_sv_SE.ts  core_tr_TR.ts  core_uk_UA.ts  core_vi_VN.ts  core_zh_CN.ts  core_zh_TW.ts
Letos/gui/: CMakeLists.txt  extendedpalette.cpp  icon.cpp  icon.h  iconmanager.cpp  iconmanager.h  icons.qrc  mainwindow.cpp  style.cpp  uiconfig.h  uicustomicon.cpp
Letos/gui/completer/: completerwindow.cpp
Letos/gui/datagrid/: sqlquerymodel.cpp  sqlqueryview.cpp
Letos/gui/dbtree/: dbtree.cpp
Letos/gui/dialogs/: aboutdialog.cpp  aboutdialog.ui  configdialog.cpp  configdialog.h  configdialog.ui  dbdialog.cpp  dbdialog.ui
Letos/gui/translations/: gui.ts  gui_af_ZA.ts  gui_ar_SA.ts  gui_be_BY.ts  gui_ca_ES.ts  gui_cs_CZ.ts  gui_da_DK.ts  gui_de_DE.ts  gui_el_GR.ts  gui_en_US.ts  gui_fa_IR.ts  gui_fi_FI.ts  gui_fr_FR.ts  gui_hu_HU.ts  gui_it_IT.ts  gui_ja_JP.ts  gui_kaa.ts  gui_ko_KR.ts  gui_pl_PL.ts  gui_pt_BR.ts  gui_pt_PT.ts  gui_ro_RO.ts  gui_sk_SK.ts  gui_sr_SP.ts  gui_sv_SE.ts  gui_tr_TR.ts  gui_uk_UA.ts  gui_vi_VN.ts  gui_zh_CN.ts  gui_zh_TW.ts
(+702 files in other folders)
